# chdb-ds

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHDB_LIMITATIONS.md  COLUMNEXPR_TYPE_SYSTEM_EXPLAINED.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  EVALUATION_REPORT.md  KAGGLE_ANALYSIS_SUMMARY.md  KAGGLE_PANDAS_COMPATIBILITY_REPORT.md  LLM_PANDAS_COMPATIBILITY_FINDINGS.md  Makefile  NUMPY_QUICK_REFERENCE.md  PACKAGE_INFO.md  PANDAS_COMPATIBILITY_ANALYSIS.md  PANDAS_COMPATIBILITY_ANALYSIS_README.md  PANDAS_COMPATIBILITY_IMPROVEMENT_RECOMMENDATIONS.md  PANDAS_COMPATIBILITY_IMPROVEMENT_REPORT.md  PANDAS_COMPATIBILITY_REPORT.md  PANDAS_COMPATIBILITY_REPORT_MAIN.md  PR_SUMMARY.md  README.md  README_IMPROVEMENTS.md  RELEASING.md  __init__.py  analyze_pandas_notebooks.py  clean_commits.py  codecov.yml  core.py  datastore_pandas_compatibility_results.csv  demo_display_improvements.py  evaluation_advanced.py  evaluation_report.py  filter_callback.py  kaggle_llm_pandas_test.py  kaggle_pandas_compatibility_test.py  pandas_compatibility_report.txt  pandas_compatibility_results.json  pandas_compatibility_test.py  pandas_operations_analysis.json  (+11 more)
datastore/: pandas_compat.py
docs/: DTYPE_CORRECTION_DESIGN.md  EXPLAIN_METHOD.md  FACTORY_METHODS.md  FUNCTIONS.md  PANDAS_COMPATIBILITY.md  XFAIL_ANALYSIS.md
examples/: example_daily_usage.ipynb  example_lazy_execution.py  example_profiling.py
refs/: benchmark_chdb_duckdb_polars.py  benchmark_datastore_vs_pandas.py  benchmark_pandas_vs_sql.py  chdb-data-science-api.md  pandas_operations_from_100_notebooks.py  test_datastore_pandas_compatibility.py
scripts/: ch_functions.json  check_charset.py  fetch_ch_functions.py
tests/: conftest.py  kaggle_pandas_compat_comparison.py  kaggle_pandas_compatibility_test.py  test_accessor_fallback_registry.py  test_advanced_pandas_operations.py  test_array_accessor.py  test_assign_mixed.py  test_benchmark_fixes.py  (+129 more)
(+7 files in other folders)
