[metadata]
name = chdb-ds
description = A Pandas-like data manipulation framework with automatic SQL generation
long_description = file: README.md
long_description_content_type = text/markdown
author = auxten
author_email = auxtenwpc@gmail.com
url = https://github.com/auxten/chdb-ds
project_urls =
    Documentation = https://github.com/auxten/chdb-ds
    Source = https://github.com/auxten/chdb-ds
    Tracker = https://github.com/auxten/chdb-ds/issues
license = Apache License 2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: SQL
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    chdb>=2.0.0

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 0

[flake8]
exclude = docs, .git, __pycache__, tests, build, dist
max-line-length = 120
per-file-ignores = __init__.py:F401

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

